--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
 
     <title>Icon Menu</title>
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/ffaed3d8bd.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
+    <div class="container">
+      <div class="menu">
+        <nav class="navbar">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
