--- a/index.html
+++ b/index.html
@@ -17,11 +17,26 @@
       <div class="menu">
         <nav class="navbar">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <i class="fas fa-list"></i>
+              <span>All</span>
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              <span>Pass</span>
+            </li>
+            <li>
+              <i class="fas fa-times"></i>
+              <span>Fail</span>
+            </li>
+            <li>
+              <i class="fas fa-question"></i>
+              <span>Unset</span>
+            </li>
+            <li>
+              <i class="fas fa-sync"></i>
+              <span>Running</span>
+            </li>
           </ul>
         </nav>
       </div>
