--- a/index.html
+++ b/index.html
@@ -13,33 +13,28 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="menu">
-        <nav class="navbar">
-          <ul>
-            <li>
-              <i class="fas fa-list"></i>
-              <span>All</span>
-            </li>
-            <li>
-              <i class="fas fa-check"></i>
-              <span>Pass</span>
-            </li>
-            <li>
-              <i class="fas fa-times"></i>
-              <span>Fail</span>
-            </li>
-            <li>
-              <i class="fas fa-question"></i>
-              <span>Unset</span>
-            </li>
-            <li>
-              <i class="fas fa-sync"></i>
-              <span>Running</span>
-            </li>
-          </ul>
-        </nav>
-      </div>
+
+    <div class="menu">
+      <nav class="menuBar">
+        <ul class="noBullets">
+          <li>
+            <i class="fas fa-list"></i>
+            <span>All</span>
+          </li><li>
+            <i class="fas fa-check"></i>
+            <span>Pass</span>
+          </li><li>
+            <i class="fas fa-times"></i>
+            <span>Fail</span>
+          </li><li>
+            <i class="fas fa-question"></i>
+            <span>Unset</span>
+          </li><li>
+            <i class="fas fa-sync"></i>
+            <span>Running</span>
+          </li>
+        </ul>
+      </nav>
     </div>
   </body>
 </html>
